notice temporary changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "cSpell.words": [
         "Attendanceform",
         "Atttable",
-        "Dashleft"
+        "Dashleft",
+        "Prevass",
+        "prevassignment"
     ]
 }
