--- a/studentfrontend/package.json
+++ b/studentfrontend/package.json
@@ -20,6 +20,7 @@
     "rc-progress": "^3.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "typescript": "4.9.5"
   },
   "devDependencies": {
