--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
     "cSpell.words": [
+        "attendanceconfig",
         "Attendanceform",
         "Atttable",
         "Dashleft",
         "Prevass",
-        "prevassignment"
+        "prevassignment",
+        "storyblok"
     ]
 }
